# sketchkit

./: .fips-imports.cmake  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  build.bat  fips.yml  mesh.c  phong.c
apps/: CMakeLists.txt  assets.yml  hello.c  mesh.c  phong.c
apps/assets/: big.m3d  gltf.glb  shader.frag  shader.vert
apps/shaders/: build.bat  hello.fs  hello.vs  model.fs  model.vs  model_varying.def  phong.fs  phong.vs  phong_varying.def
assets/: cube.m3d  sphere.m3d
code/: m3d.c  m3d.h  sk.c  sk.h
libs/win64/: bimg.lib  bx.lib
shd/: build.bat  model.fs  model.vs  model_varying.def  phong.fs  phong.vs  phong_varying.def
sk/: RGFW.c  bgfx.h  m3d.h  sk.c  sk.h
